Italian translation updates

--- a/.lang/it.po
+++ b/.lang/it.po
@@ -6133,99 +6133,99 @@ msgstr "1 - Prima il campo inferiore"
 
 #: VFiltersCfg.class:447
 msgid "Input format"
-msgstr ""
+msgstr "Formato d'ingresso"
 
 #: VFiltersCfg.class:447
 msgid "ab2l - above-below with half height resolution (left eye above, right eye below)"
-msgstr ""
+msgstr "ab2l - sopra-sotto a mezza risoluzione (occhio sinistro sopra)"
 
 #: VFiltersCfg.class:447
 msgid "ab2r - above-below with half height resolution (right eye above, left eye below)"
-msgstr ""
+msgstr "ab2r - sopra-sotto a mezza risoluzione (occhio destro sopra)"
 
 #: VFiltersCfg.class:447
 msgid "abl - above-below (left eye above, right eye below)"
-msgstr ""
+msgstr "abl - sopra-sotto (occhio sinistro sopra)"
 
 #: VFiltersCfg.class:447
 msgid "abr - above-below (right eye above, left eye below)"
-msgstr ""
+msgstr "abr - sopra-sotto (occhio destro sopra)"
 
 #: VFiltersCfg.class:447
 msgid "sbs2l - side by side with half width resolution (left eye left, right eye right)"
-msgstr ""
+msgstr "sbs2l - fianco-fianco  e mezza risoluzione orizzontale (occhio sinistro a sinistra, destro a destra)"
 
 #: VFiltersCfg.class:447
 msgid "sbs2r - side by side with half width resolution (right eye left, left eye right)"
-msgstr ""
+msgstr "sbs2r - fianco-fianco  e mezza risoluzione orizzontale (occhio sinistro a destra, destro a sinistra)"
 
 #: VFiltersCfg.class:447
 msgid "sbsl - side by side parallel (left eye left, right eye right)"
-msgstr ""
+msgstr "sbsl - fianco-fianco parallela (occhio sinistro a sinistra, destro a destra)"
 
 #: VFiltersCfg.class:447
 msgid "sbsr - side by side crosseye (right eye left, left eye right)"
-msgstr ""
+msgstr "sbsr - fianco-fianco incrociata (occhio sinistro a destra, destro a sinistra)"
 
 #: VFiltersCfg.class:448
 msgid "Output format"
-msgstr ""
+msgstr "Formato d'uscita"
 
 #: VFiltersCfg.class:448
 msgid "agmc - anaglyph green/magenta colored (green filter on left eye, magenta filter on right eye)"
-msgstr ""
+msgstr "agmc - anaglifico colorato: occhio sinistro verde, occhio destro magenta"
 
 #: VFiltersCfg.class:448
 msgid "agmg - anaglyph green/magenta gray (green filter on left eye, magenta filter on right eye)"
-msgstr ""
+msgstr "agmg - anaglifico bianco e nero: occhio sinistro verde, occhio destro magenta"
 
 #: VFiltersCfg.class:448
 msgid "agmh - anaglyph green/magenta half colored (green filter on left eye, magenta filter on right eye)"
-msgstr ""
+msgstr "agmh - anaglifico poco colorato: occhio sinistro verde, occhio destro magenta"
 
 #: VFiltersCfg.class:448
 msgid "arcc - anaglyph red/cyan color (red filter on left eye, cyan filter on right eye)"
-msgstr ""
+msgstr "arcc - anaglifico colorato: occhio sinistro rosso, occhio destro ciano"
 
 #: VFiltersCfg.class:448
 msgid "arcd - anaglyph red/cyan color optimized with the least squares projection of dubois (red filter on left eye, cyan filter on right eye)"
-msgstr ""
+msgstr "arcd - anaglifico colorato ottimizzato: occhio sinistro rosso, destro ciano"
 
 #: VFiltersCfg.class:448
 msgid "arcg - anaglyph red/cyan gray (red filter on left eye, cyan filter on right eye)"
-msgstr ""
+msgstr "arcd - anaglifico in bianco e nero: occhio sinistro rosso, destro ciano"
 
 #: VFiltersCfg.class:448
 msgid "arch - anaglyph red/cyan half colored (red filter on left eye, cyan filter on right eye)"
-msgstr ""
+msgstr "arch - anaglifico poco colorato: occhio sinistro rosso, destro ciano"
 
 #: VFiltersCfg.class:448
 msgid "aybc - anaglyph yellow/blue colored (yellow filter on left eye, blue filter on right eye)"
-msgstr ""
+msgstr "aybc - anaglifico colorato: occhio sinistro giallo, destro blu"
 
 #: VFiltersCfg.class:448
 msgid "aybg - anaglyph yellow/blue gray (yellow filter on left eye, blue filter on right eye)"
-msgstr ""
+msgstr "aybg - anaglifico in bianco e nero: occhio sinistro giallo, destro blu"
 
 #: VFiltersCfg.class:448
 msgid "aybh - anaglyph yellow/blue half colored (yellow filter on left eye, blue filter on right eye)"
-msgstr ""
+msgstr "aybh - anaglifico poco colorato: occhio sinistro giallo, destro blu"
 
 #: VFiltersCfg.class:448
 msgid "irl - Interleaved rows (left eye has top row, right eye starts on next row)"
-msgstr ""
+msgstr "irl - Linee interlacciate (l'occhio sinistro ha la riga superiore)"
 
 #: VFiltersCfg.class:448
 msgid "irr - Interleaved rows (right eye has top row, left eye starts on next row)"
-msgstr ""
+msgstr "irl - Linee interlacciate (l'occhio destro ha la riga superiore)"
 
 #: VFiltersCfg.class:448
 msgid "ml - mono output (left eye only)"
-msgstr ""
+msgstr "ml - uscita mono (solo occhio sinistro)"
 
 #: VFiltersCfg.class:448
 msgid "mr - mono output (right eye only)"
-msgstr ""
+msgstr "ml - uscita mono (solo occhio destro)"
 
 #: VFiltersCfg.form:23
 msgid "Video Filters configuration"
