Do not use DynDns urls anymore

--- a/.hidden/CHANGELOG
+++ b/.hidden/CHANGELOG
@@ -1,3 +1,7 @@
+* Mon Mar 31 2014 Antonio Orefice <xt7player@gmail.com> 3.5.2
+- FIX: Playlist items move was broken, fixed.
+- CHANGE: REQUIRES youtube-dl >= 2014.03.21 to watch youtube videos.
+
 * Thu Mar 13 2014 Antonio Orefice <xt7player@gmail.com> 3.5.2
 - NEW:    Hungarian Translation (thanks to Toroka)
 - NEW:    Initial Icecast support
