--- a/.lang/VideoEqualizer.pot
+++ b/.lang/VideoEqualizer.pot
@@ -79,7 +79,7 @@ msgid "Saturation"
 msgstr ""
 
 #: VideoEqualizer.form:278
-msgid "Overbright:\nPush contrast trying to preserve color details.\nUseful for low contrast videos or low contrast displays.\nMay produce clipping/saturation artifacts.\n"
+msgid "Overbright:\nPush contrast trying to preserve color details.\nUseful for low contrast videos or low contrast displays.\nMay produce clipping/saturation artifacts.\n\nWorks best with Xv and GL video drivers."
 msgstr ""
 
 #: VideoEqualizer.class:45
